--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: paper_3d
-description: A starting point for Dart libraries or applications.
+description: A faux 3d asset rendering utility for flutter based on Stack, Container and Transformation Widgets.
 version: 1.0.0
-# homepage: https://www.example.com
+repository: https://github.com/Zira-Games/paper-3d
+homepage: https://github.com/Zira-Games/paper-3d
 
 environment:
   sdk: '>=2.17.6 <3.0.0'
@@ -13,11 +14,12 @@ dependencies:
   equatable: ^2.0.5
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
-  vector_math: any
+  vector_math: ^2.1.4
   provider: ^6.0.5
   flutter_stream_listener: ^2.0.0
   state_machine_animation: ^1.0.2
-  uuid: 3.0.6
+  collection: ^1.16.0
+  uuid: ^3.0.6
 
 dev_dependencies:
   lints: ^2.0.0
