--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: paper_3d
 description: A faux 3d asset rendering utility for flutter based on Stack, Container and Transformation Widgets.
-version: 1.0.12
+version: 1.1.2
 repository: https://github.com/Zira-Games/paper-3d
 homepage: https://github.com/Zira-Games/paper-3d
 
@@ -20,6 +20,8 @@ dependencies:
   state_machine_animation: ^1.0.2
   collection: ^1.17.0
   uuid: ^3.0.6
+  flutter_gl: ^0.0.21
+  three_dart: 0.0.16
 
 dev_dependencies:
   lints: ^2.0.0
