--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: paper_3d
 description: A faux 3d asset rendering utility for flutter based on Stack, Container and Transformation Widgets.
-version: 1.1.4
+version: 1.2.0
 repository: https://github.com/Zira-Games/paper-3d
 homepage: https://github.com/Zira-Games/paper-3d
 
 environment:
-  sdk: '>=2.17.6 <3.0.0'
+  sdk: '>=3.0.0'
 
 dependencies:
   flutter:
