--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: paper_3d
 description: A faux 3d asset rendering utility for flutter based on Stack, Container and Transformation Widgets.
-version: 1.2.0
+version: 1.2.1
 repository: https://github.com/Zira-Games/paper-3d
 homepage: https://github.com/Zira-Games/paper-3d
 
 environment:
-  sdk: '>=3.0.0'
+  sdk: '>=3.0.0 <=3.1.5'
 
 dependencies:
   flutter:
@@ -21,7 +21,7 @@ dependencies:
   collection: ^1.17.0
   uuid: ^3.0.6
   flutter_gl: ^0.0.21
-  three_dart: 0.0.16
+  three_dart: ^0.0.16
 
 dev_dependencies:
   lints: ^2.0.0
